Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-584

Handles not being released

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • build system (Windows)
    • None
    • Windows XP..

    Description

      I noticed that if I run the Math.exe test continually, the "handle count", monitored from the Windows Task Monitor, increases about 10 handles per call to math.exe Eventually this causes a memory issue. The Server side is not releasing handles.

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            jims Jim S
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: