Fixed the handle count increase problem. AXIS2C-584