src/core/transport/http/common/http_worker.c
@@ -393,8 +393,10 @@ axis2_http_worker_process_request(
     {
         axis2_msg_ctx_t *out_msg_ctx = NULL, *in_msg_ctx = NULL;
         axis2_msg_ctx_t **msg_ctx_map = NULL;
-
+        
         msg_ctx_map =  axis2_op_ctx_get_msg_ctx_map(op_ctx, env);
+
+        axis2_op_ctx_destroy_mutex(op_ctx, env);
 
         out_msg_ctx = msg_ctx_map[AXIS2_WSDL_MESSAGE_LABEL_OUT];
         in_msg_ctx = msg_ctx_map[AXIS2_WSDL_MESSAGE_LABEL_IN];
